[Bug #22092] Improve `Array#sum` when the initial value is a `Float`